--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "angular-datatables": "^11.1.1",
+    "datatables.net": "^1.10.24",
+    "datatables.net-dt": "^1.10.24",
     "jwt-decode": "^3.1.2",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
@@ -30,7 +33,9 @@
     "@angular-devkit/build-angular": "~0.1102.6",
     "@angular/cli": "~11.2.6",
     "@angular/compiler-cli": "~11.2.7",
+    "@types/datatables.net": "^1.10.19",
     "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^3.5.5",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
