--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/css/bootstrap.min.css",
+              "node_modules/bootstrap-select/bootstrap-select.min.css",
               "node_modules/perfect-scrollbar/css/perfect-scrollbar.css",
               "node_modules/morrisjs/morris.css",
               "node_modules/c3-master/c3.min.css",
@@ -42,8 +43,10 @@
             ],
             "scripts": [
               "node_modules/jquery/jquery.min.js",
+              "node_modules/datatables.net/js/jquery.dataTables.js",
               "node_modules/bootstrap/js/popper.min.js",
               "node_modules/bootstrap/js/bootstrap.min.js",
+              "node_modules/bootstrap-select/bootstrap-select.min.js",
               "node_modules/ps/perfect-scrollbar.jquery.min.js",
               "src/assets/js/waves.js",
               "src/assets/js/sidebarmenu.js",
@@ -51,11 +54,11 @@
               "node_modules/d3/d3.min.js",
               "node_modules/c3-master/c3.min.js",
               "node_modules/raphael/raphael-min.js",
-              "node_modules/datatables/jquery.dataTables.min.js",
-              
               "node_modules/toast-master/js/jquery.toast.js",
-              
+
               "node_modules/styleswitcher/jQuery.style.switcher.js"
+
+
             ]
           },
           "configurations": {
