--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "datatables.net": "^1.10.24",
     "datatables.net-dt": "^1.10.24",
     "jwt-decode": "^3.1.2",
+    "ngx-bootstrap": "^6.2.0",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
