--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "datatables.net-dt": "^1.10.24",
     "jwt-decode": "^3.1.2",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-skeleton-loader": "^2.9.1",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
