--- a/angular.json
+++ b/angular.json
@@ -33,19 +33,24 @@
               "node_modules/perfect-scrollbar/css/perfect-scrollbar.css",
               "node_modules/morrisjs/morris.css",
               "node_modules/c3-master/c3.min.css",
-              "node_modules/toast-master/css/jquery.toast.css",
               "src/styles.css",
               "src/assets/css/style.css",
               "src/assets/css/pages/dashboard1.css",
               "src/assets/css/colors/default.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
-              "node_modules/ngx-toastr/toastr.css"
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/wizard/steps.css"
             ],
             "scripts": [
               "node_modules/jquery/jquery.min.js",
+              "node_modules/moment/min/moment.min.js",
+              "node_modules/wizard/modified-jquery.steps.js",
+              "node_modules/wizard/jquery.validate.min.js",
+              "node_modules/wizard/steps.js",
               "node_modules/datatables.net/js/jquery.dataTables.js",
               "node_modules/bootstrap/js/popper.min.js",
               "node_modules/bootstrap/js/bootstrap.min.js",
+
               "node_modules/bootstrap-select/bootstrap-select.min.js",
               "node_modules/ps/perfect-scrollbar.jquery.min.js",
               "src/assets/js/waves.js",
@@ -53,12 +58,7 @@
               "src/assets/js/custom.min.js",
               "node_modules/d3/d3.min.js",
               "node_modules/c3-master/c3.min.js",
-              "node_modules/raphael/raphael-min.js",
-              "node_modules/toast-master/js/jquery.toast.js",
-
-              "node_modules/styleswitcher/jQuery.style.switcher.js"
-
-
+              "node_modules/raphael/raphael-min.js"
             ]
           },
           "configurations": {
